--- a/1101.md
+++ b/1101.md
@@ -29,5 +29,5 @@
 
 2. > 竹杖芒鞋轻胜马，谁怕，一蓑烟雨任平生。
 
-3. a link between markdown pages. Link from README.md to the second markdown file and from the second markdown file back to the README.md.
+3. [link](README.md)
 
